# spcli

./: CHANGELOG  Cargo.toml  LICENSE  README.md  build.sh
keymap/: ++  abc  gb  ms  sg  xh  zg  zr
src/: cli.rs  input.rs  main.rs  pin.rs  render.rs
text/: text.txt
