[package]
name = "spcli"
version = "0.1.0"
edition = "2021"
author = "Gerrnperl"
include = ["/keymap", "/text"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
crossterm = "0.25.0"
pinyin = "0.9"
rand = "0.8.5"
unicode-width = "0.1.9"
